# Napari_Calibration

./: LICENSE  README.md  dock_widget.py  main.py  mkdocs.yml  setup.cfg  test_napari.py  tox.ini
Calibration/: dock_widget.py  main_calibration.py
Calibration/Files/: a.txt  out.txt
Output/: OUTPUT.txt
docs/: index.md
src/: Image_widget.py  constant.py  dock_widget.py  main_calibration.py
src/Video/: video_ui.py  widget.py
src/napari_calibration/: napari.yaml
src/napari_calibration/_tests/: test_dock_widget.py  test_reader.py  test_sample_data.py  test_writer.py
