[metadata]
name = napari-calibration
version = 0.0.1
author = Tristan Cotte
author_email = tristan.cotte@sgs.com
url = https://github.com/tcotte/napari-calibration
license = BSD-3-Clause
description = Plug in which enables to make camera calibration
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/tcotte/napari-calibration/issues
    Documentation = https://github.com/tcotte/napari-calibration#README.md
    Source Code = https://github.com/tcotte/napari-calibration
    User Support = https://github.com/tcotte/napari-calibration/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy

[options.packages.find]
where = src

[options.package_data]
napari-calibration = 
    napari.yaml

[options.entry_points] 
napari.manifest = 
    napari-calibration = napari_calibration:napari.yaml
